# plugin-system

./: CMakeLists.txt  README.md
infrastructures/: CMakeLists.txt
infrastructures/inc/: IConsole.h  IContainer.h  IPlugin.h  IPluginManager.h  definitions.h  exceptions.h
lib/: CMakeLists.txt
lib/inc/: Container.h  PluginBase.h  PluginLoader.h  PluginManager.h
lib/src/: Container.cpp  PluginBase.cpp  PluginLoader.cpp  PluginManager.cpp
lib/src/platform/windows/: PluginLoader.cpp
sample/: CMakeLists.txt  main.cpp
sample/plugins/: CMakeLists.txt  PopularQuotes.cpp  StdConsole.cpp  TranslationDu.cpp
sdk/inc/: IPlugin.h  IPluginFactory.h  IPluginLoader.h  IPluginManager.h  PluginApi.h  definitions.h  exceptions.h
